==================== Dokan Changelog ====================

v2.4.3 -> August 23, 2015
---------------------
- [tweak] Welcome page on activation with resync button added 
- [tweak] Visual Progress bar added for resync Order progress 
- [fix] Sub-order duplicate issue fixed
- [fix] Fix wp editor compatible to 4.3 
- [fix] Compitable with WordPress 4.3 widget __construct functions 
- [fix] Fix table name in sync table sql 
- [fix] Fix store reveiw rewrite problem, Move store functinality in Dokan_Pro_Store class
- [fix] Fix seller migration template loader 

v2.4.2 -> August 12, 2015
---------------------
- [tweak] New hook on store header: dokan_store_before_social
- [tweak] Re-arrange dokan admin settings fields
- [tweak] Add field on seller store settings to manage store product per page
- [tweak] Sellers redirected to dashboard after login
- [fix] Feature seller widget display template path
- [fix] Best seller widget display seller name changed to store name
- [fix] Fix problem with showing variation data on order details
- [fix] Update "dokan_create_seller_order" function to save variation order meta on sub-order
- [fix] Update "dokan_post_input_box" function to add option for making text field and number field required
- [fix] Fix balance separator problem on withdraw
- [fix] Fix total sales balance display on seller dashboard page
- [fix] Keep value saved of oveerride shipping fields meta even when the option uncheckd
- [fix] English language phrases correction on several place
- [fix] Fix calculation of sub-orders in WooCommerce dashboard status widget sales query

v2.4.1 -> July 29, 2015
---------------------
- [fix] plugin updater fix: wrong plugin file path
- [fix] Store banner min-height issue
- [fix] added validation on settings/store phone field

v2.4 -> July 28, 2015
---------------------
 - [new] Code re-write, re-organized
 - [new] Customer support System for sellers
 - [tweak] After login redirect users to the page they were instead of my account