@@ -2,7 +2,7 @@
 
 v2.4.3 -> August 23, 2015
 ---------------------
-- [tweak] Welcome page on activation with resync button added 
+- [new] Welcome page on activation with resync button added 
 - [tweak] Visual Progress bar added for resync Order progress 
 - [fix] Sub-order duplicate issue fixed
 - [fix] Fix wp editor compatible to 4.3 
@@ -10,6 +10,7 @@ v2.4.3 -> August 23, 2015
 - [fix] Fix table name in sync table sql 
 - [fix] Fix store reveiw rewrite problem, Move store functinality in Dokan_Pro_Store class
 - [fix] Fix seller migration template loader 
+- [fix] Fix ame seller multiple product type shipping issue
 
 v2.4.2 -> August 12, 2015
 ---------------------
